syntax = "proto3";

option go_package = "github.com/OgnjenGolubovic/AirBnB/backend/common/authentication_service";

package authentication;

import "google/api/annotations.proto";

service AuthenticationService {
  rpc Login(Request) returns (Response) {
    option (google.api.http) = {
      post: "/auth/login"
      body: "*"
    };
  }
}

message Request {
  string username = 1;
  string password = 2;
}

message Response {
  string accessToken = 3;
}