syntax = "proto3";

option go_package = "github.com/OgnjenGolubovic/AirBnB/backend/common/reservation_service";

package reservation;

import "google/api/annotations.proto";

service ReservationService{
        rpc Get(Request) returns(Response) {
        	option (google.api.http) = {
			get: "/reservation"
		};
        }
        rpc GetAllReservedDates(Request) returns(DateResponse) {
                option (google.api.http) = {
                        get: "/reservation/get"
                };
        }
}

message Request {
        string id = 1;
}

message Response {
        string reservation = 1;
}

message DateRange {
        string StartDate = 1;
        string EndDate = 2;
}

message DateResponse {
        repeated DateRange dates = 1;
}
